[tool.poetry]
name = "soft-check"
version = "0.1.0"
description = ""
authors = ["Harut Mirakyan <harut_m@zealous.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."pytest11"]
check = "pytest_check.plugin"
